[project]
name = "Lamb"
description = "A lambda calculus engine"

# We use the standard semantic versioning:
# maj.min.pat
#
# Major release:
# 1.0.0 is the first stable release.
# Incremented on BIG breaking changes.
#
# Minor release:
# Large bug fixes, new features
#
# Patch release:
# Small, compatible fixes.
version = "0.1.0"

dependencies = [
	"prompt-toolkit==3.0.31",
	"pyparsing==3.0.9"
]

authors = [
	{ name="Mark", email="mark@betalupi.com" }
]

readme = "README.md"
requires-python = ">=3.7"
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: OS Independent",
	"Environment :: Console"
]


[project.urls]
"Homepage" = "https://git.betalupi.com/Mark/lamb"


[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["lamb"]
include = ["lamb*"]
namespaces = false

[project.optional-dependencies]
# Used to build a standalone executable
pyinstaller = [	"pyinstaller==5.5" ]