[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [ "." ]
include = ["lamb_engine*"]
namespaces = false

[project.scripts]
lamb = "lamb_engine:main"



[project]
name = "lamb_engine"
description = "A lambda calculus engine"
version = "1.1.9"
dependencies = [
	"prompt-toolkit==3.0.31",
	"pyparsing==3.0.9"
]
authors = [
	{ name="Mark", email="mark@betalupi.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: OS Independent",
	"Environment :: Console"
]

[project.urls]
"Homepage" = "https://git.betalupi.com/Mark/lamb"

# To build:
# pip install build twine
# python -m build
# twine upload dist/lamb_engine-1.1.6* (change the version)